Update Library import rules to better detect cards that need to go on SELF